# euler

./: .gitignore  euler.cabal
app/: Main.hs
src/Euler/: E1.hs  E2.hs  E60.hs
test/Euler/: E1Spec.hs  E2Spec.hs  E3Spec.hs  E60Spec.hs
